--- a/eid_mubarak.css
+++ b/eid_mubarak.css
@@ -1,3 +1,10 @@
+body {
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #111;
+  touch-action: none;
+}
 canvas {
   position: absolute;
   top: 0;
@@ -5,53 +12,18 @@ canvas {
   width: 100%;
   height: 100%;
   display: block;
+  image-rendering: -moz-crisp-edges;
+  image-rendering: pixelated;
+  -webkit-transform: translateZ(0);
 }
-
-body {
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  touch-action: none;
-  background-color: #111;
-}
-
-/* For mobile devices */
 @media screen and (max-width: 768px) {
-  /* Adjust font sizes for mobile */
   p {
-    font-size: 14px;
+      font-size: 14px;
   }
-
   p > a:first-of-type {
-    font-size: 18px;
+      font-size: 18px;
   }
-
   span {
-    font-size: 10px;
+      font-size: 10px;
   }
-}
-
-p {
-  margin: 0;
-  position: absolute;
-  font: 16px Verdana, sans-serif;
-  color: #eee;
-  height: 25px;
-  bottom: 10px;
-  left: 10px;
-  text-shadow: 0 0 2px white;
-  z-index: 100;
-}
-
-p a {
-  text-decoration: none;
-  color: #aaa;
-}
-
-span {
-  font-size: 11px;
-}
-
-p > a:first-of-type {
-  font-size: 20px;
 }
